--- a/about.html
+++ b/about.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>stash lreaning</title>
   </head>
-  <body></body>
+  <body>
+    <h2>this is a branch2 stash create learning</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsam voluptates, asperiores aliquid aspernatur in quasi, incidunt maxime numquam nostrum, aliquam corrupti tempora deleniti nobis? Exercitationem, molestias incidunt! Laboriosam, reprehenderit!</p>
+
+    <button>click</button>
+  </body>
 </html>
