--- a/about.html
+++ b/about.html
@@ -10,5 +10,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsam voluptates, asperiores aliquid aspernatur in quasi, incidunt maxime numquam nostrum, aliquam corrupti tempora deleniti nobis? Exercitationem, molestias incidunt! Laboriosam, reprehenderit!</p>
 
     <button>click</button>
+    <div>
+        <img src="#" alt="">
+        <span>this i image</span>
+    </div>
   </body>
 </html>
